# 8086cpu

./: CMakeLists.txt  LICENSE  README.md
client/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  basetypes.cpp  basetypes.h  cpu.h  disassm.cpp  disassm.h  labels.cpp  labels.h  opcode.cpp  opcode.h  rom.cpp  rom.h
tests/: CMakeLists.txt  disassm_test.cpp  mock.h  opcode0_test.cpp  opcode1_test.cpp  opcode2_test.cpp  opcode3_test.cpp  opcodeMulti_test.cpp  opcodeSingle_test.cpp  opcodeThree_test.cpp  opcodeTwo_test.cpp  opcode_test.cpp
